# COSC425-DATA

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CrossRefClassificationOrder.md  DB.html  Priority_TODO.md  README.md  TODO.md  abstract_classifier.html  academic_metrics.AI.html  academic_metrics.ChainBuilder.html  academic_metrics.DB.html  academic_metrics.ai_data_models.html  academic_metrics.ai_prompts.html  academic_metrics.configs.html  academic_metrics.constants.html  academic_metrics.core.html  academic_metrics.data_collection.html  academic_metrics.dataclass_models.html  academic_metrics.enums.html  academic_metrics.factories.html  academic_metrics.html  academic_metrics.mapping.html  academic_metrics.orchestrators.html  academic_metrics.other.html  academic_metrics.runners.html  academic_metrics.strategies.html  academic_metrics.utils.html  accounting_output.txt  ai_prompts.html  am_deps.txt  category_processor.html  chain_builder.html  check_deps.py  compare_deps.py  config.html  convert_requirementsTxt_to_conda.py  data_collection.html  (+29 more)
.github/workflows/: deploy_docs.yml  documentation.yml  python-publish.yml
Cole_AI_TextAnalysis/TextAnalysis/: Taxonomy.json  gptAnalysis.py
Database/: ArticleAPI.py  DatabaseSetup.py  category_data.json  database.py  models.py  processed_category_data.json
GeneralUtilities/PickleDict/: PickleDictLoader.py
GeneralUtilities/file_ops/: file_ops.py
GeneralUtilities/logging/: logger.py
GeneralUtilities/performance_monitoring/: pm_tools.py
GeneralUtilities/tracing/: tracer.py  tracer_documentation.md
PythonCode/: requirements.txt
PythonCode/DeducedData/: CSV_to_PandasDF.py  FacultyNameFormatter.py  FuzzyMatcher.py  PseudoUniqueFaculty.py  SimilarityStrategy.py
PythonCode/Utilities/: AbstractCategoryMap.py  AttributeExtractionStrategies.py  My_Data_Classes.py  SU_Category_Data.xlsx  SU_Category_Data_Themes.xlsx  _AbstractCategoryMap.py  abstracts_to_categories.json  abstracts_to_categories_2.json  article_stats_dict.pkl  category_dict.pkl  category_processor.py  enums.py  faculty_department_manager.py  faculty_set_postprocessor.py  faculty_stats_dict.pkl  file_convert.py  file_handler.py  firecrawl_test.py  generate_aux_stats.py  get_absracts.py  get_crossref_ab.py  get_crossref_authors.py  get_crossref_titles.py  get_n_items_from_crossref_static_data.py  get_titles.py  missing_abstracts.txt  processed_category_data.json  processed_faculty_stats_data.json  professor_dump_to_pandas.py  savedrecs-5.txt  strategy_factory.py  test_processed_article_stats_data.json  test_processed_category_data.json  test_processed_faculty_stats_data.json  to_csv.py  unknown_authors.json  utilities.py  warning_manager.py  wos_classification.py
PythonCode/academic_metrics/: __init__.py
PythonCode/other/: REAL_verification.py  firecrawl_test.py  firecrawl_test_results.json  firecrawl_test_results.md  get_crossref_ab_title.py  some_stat_visualizations.py  test_processed_faculty_stats_data.json  title-abstract.json  vis2.py
TextAnalysis/: LOGS_categories_without_themes.txt  Taxonomy.json  Test1.json  category_data_themes.json  definition_output.json  gptAnalysis.py  logMissingDefs.py  logMisssingThemes.py  output_data.json
ToBeDeleted/: _requirements.txt  accounting_output.txt  dm_full_verification.py  economics_output.txt  rtf_to_json.py  verfication2.py  verification_output.txt
ToBeDeleted/DeducedData/: Official_Faculty_Titles.py  PseudoUniqueFaculty.py
ToBeDeleted/TextAnalysis/: README.md  Taxonomy.json  gptAnalysis.py  logMissingDefs.py  logMisssingThemes.py  processed_category_data.json  taxonomyExample.json
_modules/: index.html  typing.html
_sources/: abstract_classifier.rst.txt  academic_metrics.AI.rst.txt  academic_metrics.ChainBuilder.rst.txt  academic_metrics.DB.rst.txt  academic_metrics.ai_data_models.rst.txt  academic_metrics.ai_prompts.rst.txt  academic_metrics.configs.rst.txt  academic_metrics.constants.rst.txt  academic_metrics.core.rst.txt  academic_metrics.data_collection.rst.txt  academic_metrics.dataclass_models.rst.txt  academic_metrics.enums.rst.txt  academic_metrics.factories.rst.txt  academic_metrics.mapping.rst.txt  academic_metrics.orchestrators.rst.txt  academic_metrics.other.rst.txt  academic_metrics.rst.txt  academic_metrics.runners.rst.txt  academic_metrics.strategies.rst.txt  academic_metrics.utils.rst.txt  ai_prompts.rst.txt  config.rst.txt  factories.rst.txt  index.rst.txt  modules.rst.txt  orchestrators.rst.txt  strategies.rst.txt  utils.rst.txt
_static/: documentation_options.js
additional_information/: SiteCreationGuide.md
assets/: citations.txt
docs/: requirements.txt
(+1355 files in other folders)
